# nowu

./: .copilotignore  .coverage  AGENTS.md  ARCHITECTURE.md  BOOTSTRAP-ARCHITECTURE.md  BOOTSTRAP-DELIVERY.md  BOOTSTRAP-FULL.md  BOOTSTRAP-RETROSPECTIVE.md  BOOTSTRAP-STRATEGIC.md  BOOTSTRAP.md  BOOTSTRAP_lean.md  CLAUDE.md  DECISIONS.md  FILE-STRUCTURE.md  PROGRESS.md  USE_CASES.md  V1_PLAN.md  WORKFLOW.md  nowu_framework.code-workspace  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: copilot-instructions.md
.sisyphus/: boulder.json
9ed3396f/: BOOTSTRAP.md  WORKFLOW-DETAILED.md
agents/: step-01-know-schema.md  step-03-know-cli.md  step-04-soul-files.md  step-05-flow-session.md  step-06-bridge-cli.md
docs/: ALTITUDES.md  ARCH-WORKFLOW.md  ARCHITECTURE.md  C4-AND-CPG.md  CLAUDE-SETUP.md  DECISIONS.md  GLOBAL-MODEL.md  ONBOARDING.md  PRE-WORKFLOW-P0-UC-spec.md  PRE-WORKFLOW.md  PROGRESS.md  ROADMAP-001.md  ROADMAP-002.md  ROADMAP-003.md  ROADMAP-004.md  ROADMAP.md  STAGED-PLAN.md  STEP_01_ARCHITECTURE_ANALYSIS.md  STEP_01_TASK_SHAPING.md  USE_CASES.md  USE_CASES.proposed.md  V1_PLAN.md  WORKFLOW-DETAILED.md  WORKFLOW-OVERVIEW.md  WORKFLOW.md  vision.md
scripts/: verify-artifact.py
soul/: SESSION-STATE.md
state/: PROGRESS.md  SESSION_STATE.md  session-log.md
templates/: agent-definition-5x10.md  artifact-5x10.md  capture-record.md  changeset.md  constraints-sheet.md  decision-handoff.md  decision.md  goal-5x10.md  goal-brief.md  health-report.md  intake-brief.md  intake-s1.md  options-sheet.md  review-report.md  task-spec.md  (+1 more)
(+555 files in other folders)
