[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nowu"
version = "0.1.0"
description = "AI-first framework runtime scaffold"
readme = "ARCHITECTURE.md"
requires-python = ">=3.11"
authors = [{ name = "Raphael Weidemann" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
